// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`explain: D receiver forms mixed partial golden 1`] = `
{
  "initial": "D(y^3 * x^2, x, y)",
  "result": "6x * y^2",
  "steps": [
    "derivative.product-rule: D(D(x^2, x) * y^3, y)",
    "derivative.power-rule: D(2x * y^3, y)",
    "derivative.product-rule: 2x * D(y^3, y)",
    "derivative.power-rule: 6x * y^2",
  ],
}
`;

exports[`explain: golden D explanations (x^2+1)/(x-1): quotient rule chain 1`] = `
{
  "initial": "D((x^2 + 1) / (x - 1), x)",
  "result": "(x^2 - 2x - 1) / (x - 1)^2",
  "steps": [
    "derivative.quotient-rule: (-(x^2 + 1) * D(x - 1, x) + (x - 1) * D(x^2 + 1, x)) / (x - 1)^2",
    "derivative.sum-rule: (-(x^2 + 1) * D(x - 1, x) + (x - 1) * D(x^2, x)) / (x - 1)^2",
    "derivative.power-rule: (-(x^2 + 1) * D(x - 1, x) + 2x * (x - 1)) / (x - 1)^2",
    "derivative.sum-rule: (-x^2 + 1 + 2x * (x - 1)) / (x - 1)^2",
    "derivative.simplify: (x^2 - 2x - 1) / (x - 1)^2",
  ],
}
`;

exports[`explain: golden D explanations e^{cos x}: exponential rule + chain 1`] = `
{
  "initial": "D(e^(cos(x)), x)",
  "result": "-(sin(x) * e^(cos(x)))",
  "steps": [
    "derivative.exponential-rule: D(cos(x), x) * e^(cos(x))",
    "derivative.known-derivative: -(sin(x) * e^(cos(x)))",
  ],
}
`;

exports[`explain: golden D explanations sin(x^2): chain rule + power rule 1`] = `
{
  "initial": "D(sin(x^2), x)",
  "result": "2x * cos(x^2)",
  "steps": [
    "derivative.chain-rule: cos(x^2) * D(x^2, x)",
    "derivative.power-rule: 2x * cos(x^2)",
  ],
}
`;

exports[`explain: golden D explanations x sin(x): product rule + known derivative 1`] = `
{
  "initial": "D(x * sin(x), x)",
  "result": "x * cos(x) + sin(x)",
  "steps": [
    "derivative.product-rule: x * D(sin(x), x) + sin(x)",
    "derivative.known-derivative: x * cos(x) + sin(x)",
  ],
}
`;

exports[`explain: golden D explanations x^3+2x+1: sum / power / product chain 1`] = `
{
  "initial": "D(x^3 + 2x + 1, x)",
  "result": "3x^2 + 2",
  "steps": [
    "derivative.sum-rule: D(x^3, x) + D(2x, x)",
    "derivative.power-rule: 3x^2 + D(2x, x)",
    "derivative.product-rule: 3x^2 + 2",
  ],
}
`;

exports[`explain: golden D explanations x^x: general power rule 1`] = `
{
  "initial": "D(x^x, x)",
  "result": "x^x + ln(x) * x^x",
  "steps": [
    "derivative.general-power-rule: (ln(x) + 1) * x^x",
    "derivative.simplify: x^x + ln(x) * x^x",
  ],
}
`;

exports[`explain: golden explanations (x+1)^2 - x^2 - 2x - 1 -> 0 1`] = `
{
  "initial": "-x^2 + (x + 1)^2 - 2x - 1",
  "result": "0",
  "steps": [
    "expand: 0",
  ],
}
`;

exports[`explain: golden explanations (x^2-1)/(x-1): cancel common polynomial factors 1`] = `
{
  "initial": "(x^2 - 1) / (x - 1)",
  "result": "x + 1",
  "steps": [
    "cancel common polynomial factors: x + 1",
  ],
}
`;

exports[`explain: golden explanations |-x| -> |x|: abs-negate 1`] = `
{
  "initial": "|-x|",
  "result": "|x|",
  "steps": [
    "|-x| -> |x|: |x|",
  ],
}
`;

exports[`explain: golden explanations a^5/a^2: exponent subtraction 1`] = `
{
  "initial": "a^5 / a^2",
  "result": "a^3",
  "steps": [
    "cancel common polynomial factors: a^3",
  ],
}
`;

exports[`explain: golden explanations e^{ln x}: reduces via simplify (one step), not canonicalization 1`] = `
{
  "initial": "e^(ln(x))",
  "result": "x",
  "steps": [
    "e^ln(x) -> x: x",
  ],
}
`;

exports[`explain: golden explanations ln(x^3): log rule brings the exponent out (transform) 1`] = `
{
  "initial": "ln(x^3)",
  "result": "3ln(x)",
  "steps": [
    "ln: 3ln(x)",
  ],
}
`;

exports[`explain: golden explanations sin(pi + x): angle shift 1`] = `
{
  "initial": "sin(x + pi)",
  "result": "-sin(x)",
  "steps": [
    "Sin(π + x) -> -Sin(x): -sin(x)",
  ],
}
`;

exports[`explain: golden explanations sin^2(x) + cos^2(x): Pythagorean identity 1`] = `
{
  "initial": "sin(x)^2 + cos(x)^2",
  "result": "1",
  "steps": [
    "sin²(x) + cos²(x) -> 1: 1",
  ],
}
`;

exports[`explain: golden explanations sqrt(x^2) -> |x| 1`] = `
{
  "initial": "sqrt(x^2)",
  "result": "|x|",
  "steps": [
    "sqrt(x^2) -> |x|: |x|",
  ],
}
`;

exports[`explain: golden explanations sqrt[4]{16 b^4}: multi-step radical chain 1`] = `
{
  "initial": "root(4)(16b^4)",
  "result": "2 * |b|",
  "steps": [
    "root(product, n) -> factored: 2 * |b|",
  ],
}
`;

exports[`explain: golden explanations x - 1: canonicalization out of frame (zero steps) 1`] = `
{
  "initial": "x - 1",
  "result": "x - 1",
  "steps": [],
}
`;

exports[`explain: golden solve explanations |x-1|=2: two absolute-value branches 1`] = `
{
  "initial": "|x - 1| === 2",
  "result": "[-1,3]",
  "steps": [
    "solve.move-terms: |x - 1| - 2 === 0",
    "solve.absolute-value-positive: x === -1",
    "solve.absolute-value-negative: x === 3",
    "solve.roots: [x === -1,x === 3]",
  ],
}
`;

exports[`explain: golden solve explanations 2sqrt(x)+3root(4,x)=2: rational-power substitution 1`] = `
{
  "initial": "2sqrt(x) + 3root(4)(x) === 2",
  "result": "[1/16]",
  "steps": [
    "solve.move-terms: 2sqrt(x) + 3root(4)(x) - 2 === 0",
    "solve.substitute: u === root(4)(x)",
    "solve.substituted-equation: 2u^2 + 3u - 2 === 0",
    "solve.back-substitute: [x === 1/16,x === 16]",
    "solve.validate-roots: x === 16",
    "solve.roots: x === 1/16",
  ],
}
`;

exports[`explain: golden solve explanations 2x+1=5: linear isolation 1`] = `
{
  "initial": "2x + 1 === 5",
  "result": "[2]",
  "steps": [
    "solve.move-terms: 2x - 4 === 0",
    "solve.linear: x === 2",
  ],
}
`;

exports[`explain: golden solve explanations e^{2x}-3e^x+2=0: substitute / substituted-equation / back-substitute 1`] = `
{
  "initial": "-3e^x + e^(2x) + 2 === 0",
  "result": "[ln(2),0]",
  "steps": [
    "solve.substitute: u === e^x",
    "solve.substituted-equation: u^2 - 3u + 2 === 0",
    "solve.back-substitute: [x === ln(2),x === 0]",
  ],
}
`;

exports[`explain: golden solve explanations ln(x)*(x-1)=0: zero-product 1`] = `
{
  "initial": "(x - 1) * ln(x) === 0",
  "result": "[1]",
  "steps": [
    "solve.move-terms: x * ln(x) - ln(x) === 0",
    "solve.factor-zero-product: [x - 1 === 0,ln(x) === 0]",
    "solve.roots: x === 1",
  ],
}
`;

exports[`explain: golden solve explanations sin(x)=1/2: inverse trig with second branch 1`] = `
{
  "initial": "sin(x) === 1/2",
  "result": "[1/6 * pi,5/6 * pi]",
  "steps": [
    "solve.move-terms: sin(x) - 1/2 === 0",
    "solve.clear-denominators: 2sin(x) - 1 === 0",
    "solve.sine: x === arcsin(1/2)",
    "solve.sine-second-branch: x === pi - arcsin(1/2)",
    "solve.roots: [x === 1/6 * pi,x === 5/6 * pi]",
  ],
}
`;

exports[`explain: golden solve explanations sqrt(x+1)=x-1: extraneous-root rejection 1`] = `
{
  "initial": "sqrt(x + 1) === x - 1",
  "result": "[3]",
  "steps": [
    "solve.move-terms: -x + sqrt(x + 1) + 1 === 0",
    "solve.square-both-sides: -x^2 + 3x === 0",
    "solve.quadratic-formula: [x === 0,x === 3]",
    "solve.validate-roots: x === 0",
    "solve.roots: x === 3",
  ],
}
`;

exports[`explain: golden solve explanations x^2=4: quadratic (two roots) 1`] = `
{
  "initial": "x^2 === 4",
  "result": "[2,-2]",
  "steps": [
    "solve.move-terms: x^2 - 4 === 0",
    "solve.quadratic-formula: [x === 2,x === -2]",
  ],
}
`;

exports[`explain: higher-order derivatives (options.order) order 3 of x^4: three power-rule descents, parity 1`] = `
{
  "initial": "D(x^4, x, x, x)",
  "result": "24x",
  "steps": [
    "derivative.power-rule: D(4x^3, x, x)",
    "derivative.product-rule: D(4D(x^3, x), x)",
    "derivative.power-rule: D(12x^2, x)",
    "derivative.product-rule: 12D(x^2, x)",
    "derivative.power-rule: 24x",
  ],
}
`;

exports[`explain: higher-order derivatives (options.order) second-derivative golden 1`] = `
{
  "initial": "D(x * sin(x), x, x)",
  "result": "-x * sin(x) + 2cos(x)",
  "steps": [
    "derivative.product-rule: D(x * D(sin(x), x) + sin(x), x)",
    "derivative.known-derivative: D(x * cos(x) + sin(x), x)",
    "derivative.sum-rule: D(sin(x), x) + D(x * cos(x), x)",
    "derivative.product-rule: x * D(cos(x), x) + cos(x) + D(sin(x), x)",
    "derivative.known-derivative: -x * sin(x) + cos(x) + D(sin(x), x)",
    "derivative.known-derivative: -x * sin(x) + cos(x) + cos(x)",
    "derivative.simplify: -x * sin(x) + 2cos(x)",
  ],
}
`;

exports[`explain: solve Or (alternatives) Or(x^2=1, x=3): per-case steps + merged roots, parity 1`] = `
{
  "initial": "x === 3 || x^2 === 1",
  "result": "[3,1,-1]",
  "steps": [
    "solve.case: x === 3",
    "solve.move-terms: x - 3 === 0",
    "solve.linear: x === 3",
    "solve.case: x^2 === 1",
    "solve.move-terms: x^2 - 1 === 0",
    "solve.quadratic-formula: [x === 1,x === -1]",
    "solve.roots: [x === 3,x === 1,x === -1]",
  ],
}
`;

exports[`explain: solve linear systems 2x2 golden: eliminate + back-substitute, parity, empirical 1`] = `
{
  "initial": "[2x + y === 5,x - y === 1]",
  "result": "[x === 2,y === 1]",
  "steps": [
    "solve.system.eliminate: [2x + y === 5,-3/2 * y === -3/2]",
    "solve.system.back-substitute: [y === 1]",
    "solve.system.back-substitute: [x === 2,y === 1]",
  ],
}
`;

exports[`explain: solve polynomial systems product-sum (x+y=5, xy=6): product-sum milestone + parity 1`] = `
{
  "initial": "[x + y === 5,x * y === 6]",
  "result": "[[x === 3,y === 2],[x === 2,y === 3]]",
  "steps": [
    "solve.system.product-sum: t^2 - 5t + 6 === 0",
    "solve.roots: [[x === 3,y === 2],[x === 2,y === 3]]",
  ],
}
`;
